# internal/adapter/task/restful/api/v1/tasks/tasks.go
@@ -1,20 +1,0 @@
-package tasks
-
-import (
-	tb "github.com/blackhorseya/ekko/pkg/entity/domain/task/biz"
-	"github.com/gin-gonic/gin"
-)
-
-type impl struct {
-	biz tb.IBiz
-}
-
-func Handle(g *gin.RouterGroup, biz tb.IBiz) {
-	i := &impl{biz: biz}
-
-	g.GET(":id", i.GetByID)
-	g.GET("", i.List)
-	g.POST("", i.Create)
-	g.PATCH(":id/status", i.UpdateStatus)
-	g.DELETE(":id", i.Delete)
-}
